# daedelus

./: .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  CLEANED_FOR_GITHUB.txt  CONTRIBUTING.md  DAEMON_FIX_SUMMARY.md  DAEMON_SOCKET_FIX.md  ENHANCEMENT_MODEL_MERGING.md  FINAL_VERIFICATION.txt  GITHUB_READY.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  PHASE2_LLM.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_FIRST.md  SECURITY.md  TEST_COVERAGE.md  UPLOAD_TO_GITHUB.sh  VERIFICATION_REPORT.md  codecov.yml  config.example.yaml  install.sh  privacy.yaml  pyproject.toml  quick_verify.py  requirements-dev.txt  requirements-llm.txt  requirements.txt  static_analysis.py  test_daemon_fix.py  test_daemon_startup.py  test_socket_import_fix.py  uninstall.sh  verify_integrations.py
.devdocs/: IMPLEMENTATION_SUMMARY.md  README.md
.devdocs/planning/: daedelus_complete_blueprint.md  daedelus_executive_summary.md  daedelus_implementation_guide.md  daedelus_master_index.md  daedelus_research_database.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  release.yml  security.yml  test.yml
contrib/systemd/: README.md  daedelus.service  daedelus.socket
data/knowledge_base/: REDBOOK.md
data/synonyms/: shell_terms.yaml
docs/: API.md  ARCHITECTURE.md  DEUS_INTEGRATION.md  MODEL_SETUP.md  NEW_FEATURES.md  NLP_GUIDE.md  README.md  TROUBLESHOOTING.md
scripts/: README.md  cleanup-daemon.sh  fix_cuda_pytorch.sh  install-systemd-service.sh  integrate_redbook.py  remove-deprecated-deps.sh  uninstall-systemd-service.sh  validate-installation.sh
shell_clients/: aliases.sh
shell_clients/bash/: daedelus.bash
shell_clients/fish/: daedelus.fish
shell_clients/zsh/: daedelus.plugin.zsh
src/daedelus/: __init__.py
src/daedelus/cli/: __init__.py  config_commands.py  daemon_commands.py  extended_commands.py  integration_commands.py  interactive_commands.py  llm_commands.py  main.py  model_commands.py  repl.py
src/daedelus/core/: __init__.py  analytics.py  cache.py  command_executor.py  context_engine.py  database.py  embeddings.py  file_operations.py  integration.py  intent_classifier.py  knowledge_retriever.py  permission_manager.py  plugin_interface.py  plugin_loader.py  privacy_manager.py  safety.py  subprocess_validator.py  suggestions.py  system_cache.py  templates.py  tool_system.py  vector_store.py
src/daedelus/daemon/: __init__.py  daemon.py  ipc.py
src/daedelus/llm/: __init__.py  ai_interpreter.py  command_explainer.py  command_generator.py  deus_model_manager.py  document_ingestion.py  enhanced_knowledge_base.py  enhanced_suggestions.py  hybrid_search.py  intent_classifier.py  knowledge_base.py  knowledge_embeddings.py  knowledge_graph.py  llm_manager.py  model_downloader.py  model_manager.py  peft_trainer.py  query_expansion.py  rag_pipeline.py  semantic_chunker.py  training_coordinator.py  training_data_organizer.py  training_ui.py  web_search.py
src/daedelus/plugins/analytics_export/: __init__.py  main.py  plugin.yaml
src/daedelus/plugins/hello_world/: main.py  plugin.yaml
src/daedelus/plugins/neovim_integration/: __init__.py  main.py  plugin.yaml
src/daedelus/shell_clients/: README.md  aliases.zsh
src/daedelus/shell_clients/zsh/: daedelus.plugin.zsh
src/daedelus/ui/: __init__.py  dashboard.py  enhanced_dashboard.py  ipc_client.py  memory_and_permissions.py  settings_panel.py
src/daedelus/ui/screens/: __init__.py  analytics.py  history.py  overview.py  prompts.py  settings.py
src/daedelus/utils/: __init__.py  backup.py  config.py  dependencies.py  fuzzy.py  highlighting.py  logging_config.py  os_detection.py  validators.py
systemd/: daedelus.service
tests/: __init__.py  conftest.py  test_smoke.py
tests/integration/: __init__.py  test_full_workflow.py
tests/performance/: __init__.py
tests/test_cli/: test_main.py
tests/test_core/: test_cache.py  test_context_engine.py  test_database.py  test_embeddings.py  test_privacy_manager.py  test_safety.py  test_subprocess_validator.py  test_suggestions.py  test_templates.py  test_vector_store.py
tests/test_daemon/: test_daemon.py  test_ipc.py
tests/test_integration/: test_end_to_end.py  test_model_evolution.py  test_phase5_integration.py  test_shell_integration.py
tests/test_llm/: test_command_explainer.py  test_command_generator.py  test_enhanced_suggestions.py  test_intent_classifier.py  test_knowledge_embeddings.py  test_llm_manager.py  test_model_manager.py  test_peft_trainer.py  test_query_expansion.py  test_rag_pipeline.py  test_web_search.py
tests/test_ui/: test_dashboard.py
tests/test_utils/: test_backup.py  test_config.py  test_dependencies.py  test_logging_config.py
tests/unit/: __init__.py  test_command_explainer.py  test_command_generator.py  test_config.py  test_database.py  test_embeddings.py  test_enhanced_suggestions.py  test_ipc.py  test_llm_manager.py  test_logging.py  test_peft_trainer.py  test_rag_pipeline.py  test_suggestions.py  test_vector_store.py
