# Project Daedalus - Python Project Configuration
# Created by: orpheus497
# Architecture: Hybrid (Phase 1: FastText+Annoy, Phase 2: LLM+RAG+PEFT)

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daedelus"
version = "0.1.0"
description = "Self-contained terminal assistant with adaptive AI micro-model"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "orpheus497", email = "orpheus497@example.com"}
]
keywords = [
    "terminal",
    "assistant",
    "ai",
    "command-line",
    "shell",
    "autocomplete",
    "machine-learning"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: BSD",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]

# ========================================
# PHASE 1 DEPENDENCIES (Embedding-Based)
# ========================================
dependencies = [
    # Embeddings & Vector Search
    "fasttext==0.9.2",              # MIT - Word embeddings with subword support
    "annoy==1.17.3",                # Apache 2.0 - Fast approximate nearest neighbors

    # Terminal Integration
    "prompt-toolkit==3.0.43",       # BSD 3-Clause - Terminal UI components
    "ptyprocess==0.7.0",            # ISC - PTY handling for command monitoring

    # Utilities
    "platformdirs==4.1.0",          # MIT - User data directories
    "pyyaml==6.0.1",                # MIT - Configuration management
    "click==8.1.7",                 # BSD 3-Clause - CLI framework

    # Core Python packages
    "numpy>=1.24.0",                # BSD - Array operations
]

# ========================================
# DEVELOPMENT DEPENDENCIES
# ========================================
[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",                # MIT - Testing framework
    "pytest-cov>=4.1.0",            # MIT - Coverage plugin
    "pytest-asyncio>=0.21.0",       # Apache 2.0 - Async testing
    "pytest-mock>=3.11.0",          # MIT - Mocking

    # Code Quality
    "black>=23.0.0",                # MIT - Code formatter
    "ruff>=0.1.0",                  # MIT - Fast linter
    "mypy>=1.5.0",                  # MIT - Type checker
    "isort>=5.12.0",                # MIT - Import sorter

    # Profiling & Debugging
    "memory-profiler>=0.61.0",      # BSD - Memory profiling
    "line-profiler>=4.1.0",         # BSD - Line-by-line profiling
    "ipdb>=0.13.13",                # BSD - Debugger

    # Documentation
    "sphinx>=7.0.0",                # BSD - Documentation generator
    "sphinx-rtd-theme>=1.3.0",      # MIT - Read The Docs theme
]

# ========================================
# PHASE 2 DEPENDENCIES (LLM Enhancement)
# ========================================
llm = [
    # LLM Inference
    "llama-cpp-python==0.2.20",     # MIT - Llama.cpp bindings

    # Vector Database (upgrade from Annoy)
    "sqlite-vss",                   # Apache 2.0 - SQLite vector similarity search
    "apsw",                         # ZLIB - Advanced SQLite wrapper

    # PEFT Fine-Tuning
    "peft==0.7.1",                  # Apache 2.0 - Parameter-efficient fine-tuning
    "transformers==4.36.0",         # Apache 2.0 - Hugging Face transformers
    "accelerate==0.25.0",           # Apache 2.0 - Training acceleration
    "bitsandbytes==0.41.3",         # MIT - 8-bit optimizers for quantization
]

# ========================================
# PROJECT ENTRY POINTS
# ========================================
[project.scripts]
daedelus = "daedelus.cli:main"
daedelus-daemon = "daedelus.daemon.main:start_daemon"

# ========================================
# PROJECT URLS
# ========================================
[project.urls]
Homepage = "https://github.com/orpheus497/daedelus"
Documentation = "https://daedelus.readthedocs.io"
Repository = "https://github.com/orpheus497/daedelus"
Issues = "https://github.com/orpheus497/daedelus/issues"
Changelog = "https://github.com/orpheus497/daedelus/blob/main/CHANGELOG.md"

# ========================================
# SETUPTOOLS CONFIGURATION
# ========================================
[tool.setuptools]
packages = ["daedelus"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
daedelus = ["py.typed", "*.yaml", "*.sql"]

# ========================================
# BLACK CODE FORMATTER
# ========================================
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

# ========================================
# RUFF LINTER
# ========================================
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["B011"]       # assert false

# ========================================
# MYPY TYPE CHECKER
# ========================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true

# ========================================
# PYTEST CONFIGURATION
# ========================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=daedelus",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance tests",
    "slow: Slow running tests",
]

# ========================================
# COVERAGE CONFIGURATION
# ========================================
[tool.coverage.run]
source = ["src/daedelus"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ========================================
# ISORT IMPORT SORTER
# ========================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
